--- a/style.css
+++ b/style.css
@@ -42,6 +42,7 @@ h2 {
 .drink {
     display: flex;
     flex-direction: row;
+    justify-content: center;
     padding: 5px 0;
 }
 .drink button {
